add no-print class

--- a/src/components/printablecv-components/Hero.astro
+++ b/src/components/printablecv-components/Hero.astro
@@ -34,7 +34,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean)
   <div class="flex flex-row items-center justify-between gap-4">
     <div class="flex flex-col gap-[0.35rem] pr-8">
       <header>
-        <div class="theme-toggle-button">
+        <div class="no-print">
           <ThemeToggle />
         </div>
         <h1 class="text-[2rem] dark:text-[#ddd] font-semibold">{ name }</h1>
