add minTopBar component to change theme preference and

--- a/src/components/printablecv-components/Hero.astro
+++ b/src/components/printablecv-components/Hero.astro
@@ -9,7 +9,8 @@ import Github from "@/min-port-icons/Github.astro"
 import Xtw from "@/min-port-icons/Xtw.astro"
 import FlagArg from "@/min-port-icons/FlagArg.astro"
 import FlagUsa from "@/min-port-icons/FlagUsa.astro"
-import ThemeToggle from "../themeToggle.astro"
+import Topbar from "../Topbar.astro"
+import MinTopBar from "./MinTopBar.astro"
 
 interface Props {
 	data: Record<string, any>;
