--- a/src/components/printablecv-components/MinTopBar.astro
+++ b/src/components/printablecv-components/MinTopBar.astro
@@ -6,9 +6,7 @@ import Section from "@/components/printablecv-components/Section.astro";
 
 <Section>
   <nav id="topbar">
-      <div
-          class="flex justify-between items-center pt-4 max-w-2xl mx-auto lg:w-[822px]"
-      >
+      <div class="flex justify-between items-center pt-4 max-w-2xl mx-auto lg:w-[822px]">
           <ReturnHome />
           <ThemeToggle />
       </div>
