--- a/src/components/printablecv-components/About.astro
+++ b/src/components/printablecv-components/About.astro
@@ -8,5 +8,5 @@ interface Props {
 const { data, sectionTitle }= Astro.props
 ---
 <Section title={sectionTitle} >
-  <p class="dark:text-[#fff]">{data}</p>
+  <p class="text-[#555] dark:text-[#fff]">{data}</p>
 <Section />
