--- a/src/components/printablecv-components/Experience.astro
+++ b/src/components/printablecv-components/Experience.astro
@@ -10,22 +10,22 @@ const { data, sectionTitle } = Astro.props
 
 ---
 <Section title={sectionTitle} >
-  <ul>
+  <ul class="flex flex-col gap-4">
     {
       data.map(({ name, startDate, endDate, position, summary }: any) => {
         const workPeriod = `${startDate} - ${endDate}`
         return (
           <li>
             <article>
-              <header>
+              <header class="flex justify-between items-start mb-1">
                 <div>
-                  <h3>{name}</h3>
-                  <h4>{position}</h4>
+                  <h3 class="font-semibold text-[#111] dark:text-[#ddd]">{name}</h3>
+                  <h4 class="font-medium text-[#222] dark:text-[#ccc]">{position}</h4>
                 </div>
-                <time>{workPeriod}</time>
+                <time class="text-[0.85rem] text-[#555] dark:text-[#ccc]">{workPeriod}</time>
               </header>
               <footer>
-                <p>{summary}</p>
+                <p class="text-[#555] dark:text-[#ccc]">{summary}</p>
               </footer>
             </article>
           </li>
@@ -34,33 +34,3 @@ const { data, sectionTitle } = Astro.props
     }
   </ul>
 <Section />
-
-<style>
-  ul {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  article h3 {
-    font-weight: 500;
-    color: #111;
-  }
-
-  article h4 {
-    font-weight: 400;
-    color: #222;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 4px;
-  }
-
-  time {
-    font-size: .85rem;
-    color: #555;
-  }
-</style>
