--- a/src/components/printablecv-components/Experience.astro
+++ b/src/components/printablecv-components/Experience.astro
@@ -19,13 +19,13 @@ const { data, sectionTitle } = Astro.props
             <article>
               <header class="flex justify-between items-start mb-1">
                 <div>
-                  <h3 class="font-semibold text-[#111] dark:text-[#ddd]">{name}</h3>
-                  <h4 class="font-medium text-[#222] dark:text-[#ccc]">{position}</h4>
+                  <h3 class="font-semibold text-[1.1rem] text-[#111] dark:text-[#dfdfdf]">{name}</h3>
+                  <h4 class="font-normal text-[1.05rem] text-[#222] dark:text-[#dfdfdf]">{position}</h4>
                 </div>
-                <time class="text-[0.85rem] text-[#555] dark:text-[#ccc]">{workPeriod}</time>
+                <time class="text-[0.85rem] text-[#555] dark:text-[#e2e2e2]">{workPeriod}</time>
               </header>
               <footer>
-                <p class="text-[#555] dark:text-[#ccc]">{summary}</p>
+                <p class="text-[#555] dark:text-[#bbb]">{summary}</p>
               </footer>
             </article>
           </li>
