--- a/src/components/printablecv-components/Education.astro
+++ b/src/components/printablecv-components/Education.astro
@@ -9,22 +9,22 @@ interface Props {
 const { data, sectionTitle } = Astro.props
 ---
 <Section title={sectionTitle} >
-  <ul>
+  <ul class="flex flex-col gap-4">
   {
     data.map(({ institution, area, startDate, endDate, studyType}:any) => {
       const workPeriod = `${startDate} - ${endDate}`
       return (
         <li>
           <article>
-            <header>
+            <header class="flex justify-between items-start mb-1">
               <div>
-                <h3>{institution}</h3>
-                <h4>{area}</h4>
+                <h3 class="font-semibold text-[1.1rem] text-[#111] dark:text-[#dfdfdf]">{institution}</h3>
+                <h4 class="font-normal text-[#222] dark:text-[#dfdfdf]">{area}</h4>
               </div>
-              <time>{workPeriod}</time>
+              <time class="text-[0.85rem] text-[#555] dark:text-[#e2e2e2]">{workPeriod}</time>
             </header>
             <footer>
-              <p>{studyType}</p>
+              <p class="text-[#555] dark:text-[#bbb]">{studyType}</p>
             </footer>
           </article>
         </li>
@@ -33,33 +33,3 @@ const { data, sectionTitle } = Astro.props
   }
   </ul>
 <Section />
-
-<style>
-  ul {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  article h3 {
-    font-weight: 500;
-    color: #111;
-  }
-
-  article h4 {
-    font-weight: 400;
-    color: #222;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 4px;
-  }
-
-  time {
-    font-size: .85rem;
-    color: #555;
-  }
-</style>
