--- a/src/components/printablecv-components/Experience.astro
+++ b/src/components/printablecv-components/Experience.astro
@@ -20,7 +20,7 @@ const { data, sectionTitle } = Astro.props
               <header class="flex justify-between items-start mb-1">
                 <div>
                   <h3 class="font-semibold text-[1.1rem] text-[#111] dark:text-[#dfdfdf]">{name}</h3>
-                  <h4 class="font-normal text-[1.05rem] text-[#222] dark:text-[#dfdfdf]">{position}</h4>
+                  <h4 class="font-normal text-[#222] dark:text-[#dfdfdf]">{position}</h4>
                 </div>
                 <time class="text-[0.85rem] text-[#555] dark:text-[#e2e2e2]">{workPeriod}</time>
               </header>
