--- a/src/components/printablecv-components/Section.astro
+++ b/src/components/printablecv-components/Section.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props
 ---
 
 <section>
-  { title && <h2 class="dark:text-[#ddd]">{title}</h2> }
+  { title && <h2 class="dark:text-[#00FA9A]">{title}</h2> }
   <slot />
 </section>
 
