add top bar menu to printable cv

--- a/src/components/printablecv-components/MinTopBar.astro
+++ b/src/components/printablecv-components/MinTopBar.astro
@@ -8,7 +8,7 @@ import Section from "@/components/printablecv-components/Section.astro";
   <nav id="topbar">
       <div class="flex justify-between items-center pt-4 max-w-2xl mx-auto lg:w-[822px]">
           <ReturnHome />
-          <ThemeToggle />
+          <ThemeToggle darkThemeColor="#00f49a" lightThemeColor="#000" />
       </div>
   </nav>
 </Section>
