--- a/src/components/Topbar.astro
+++ b/src/components/Topbar.astro
@@ -8,13 +8,13 @@ import ThemeToggle from "./themeToggle.astro";
         class="flex justify-between items-center pt-4 w-[90vw] mx-auto lg:w-[822px]"
     >
         <Menu />
-        <ThemeToggle />
+        <ThemeToggle darkThemeColor="#ff65c5" lightThemeColor="#000" />
     </div>
 </nav>
 <script>
     const topbar = document.getElementById("topbar");
     window.addEventListener("scroll", () => {
-        if (window.scrollY >= 130) topbar.classList.add("bordered");
-        else topbar.classList.remove("bordered");
+        if (window.scrollY >= 130) topbar?.classList.add("bordered");
+        else topbar?.classList.remove("bordered");
     });
 </script>
