--- a/src/components/printablecv-components/ReturnHome.astro
+++ b/src/components/printablecv-components/ReturnHome.astro
@@ -1,10 +1,10 @@
 <button
   class="p-3 flex gap-2 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#cde7ff] dark:hover:bg-[#fff2] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors"
-  id="Return-Home"
+  id="return-Home"
 >
   <a href="/">
     <svg xmlns="http://www.w3.org/2000/svg" width="1.3rem" height="1.3rem" viewBox="0 0 14 14">
-	    <path fill="#ff65c5" fill-rule="evenodd" 
+	    <path id="svgReturnHome" fill="#00f49a" fill-rule="evenodd" 
         d="M6.545.998a1 1 0 0 0 0 2h2.728a2.638 2.638 0 0 1 0 5.275H4.817V6.545a1 
         1 0 0 0-1.707-.707L.384 8.564a1.004 1.004 0 0 0-.22 1.09c.049.119.121.23.218.327l2.728 2.728a1 
         1 0 0 0 1.707-.707v-1.729h4.456a4.638 4.638 0 1 0 0-9.275z" 
