--- a/src/components/printablecv-components/MinTopBar.astro
+++ b/src/components/printablecv-components/MinTopBar.astro
@@ -5,10 +5,18 @@ import Section from "@/components/printablecv-components/Section.astro";
 ---
 
 <Section>
-  <nav id="topbar">
+  <nav id="topbar" class="no-print px-2">
       <div class="flex justify-between items-center pt-4 max-w-2xl mx-auto lg:w-[822px]">
           <ReturnHome />
           <ThemeToggle darkThemeColor="#00f49a" lightThemeColor="#000" />
       </div>
   </nav>
 </Section>
+
+<style>
+  @media print {
+    .no-print {
+      display: none;
+    }
+  }
+</style>
