--- a/src/components/printablecv-components/MinTopBar.astro
+++ b/src/components/printablecv-components/MinTopBar.astro
@@ -5,7 +5,7 @@ import Section from "@/components/printablecv-components/Section.astro";
 ---
 
 <Section>
-  <nav id="topbar" class="no-print px-2">
+  <nav id="topbar" class="no-print px-2 pt-1">
       <div class="flex justify-between items-center pt-4 max-w-2xl mx-auto lg:w-[822px]">
           <ReturnHome />
           <ThemeToggle darkThemeColor="#00f49a" lightThemeColor="#000" />
