--- a/src/components/printablecv-components/Hero.astro
+++ b/src/components/printablecv-components/Hero.astro
@@ -34,10 +34,10 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean)
       <header>
         <h1 class="text-[2rem] dark:text-[#ddd] font-semibold">{ name }</h1>
         <div class="languageToggle">
-          <a class="es-lang" href="/min-portfolio">
+          <a class="es-lang rounded-[10px_0px_0px_10px] hover:rounded-[5px_0px_0px_5px] hover:bg-[rgb(247,255,163)] dark:hover:bg-[#4d4d4d]" href="/min-portfolio">
             <FlagArg />
           </a>
-          <a class="en-lang" href="/min-portfolio/en">
+          <a class="en-lang rounded-[0px_10px_10px_0px] hover:rounded-[0px_5px_5px_0px] hover:bg-[rgb(247,255,163)] dark:hover:bg-[#4d4d4d]" href="/min-portfolio/en">
             <FlagUsa />
           </a>
         </div>
@@ -148,27 +148,17 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean)
   }
 
   header div .es-lang {
-    border-bottom: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #777;
+    border-left: 1px solid #777;
+    border-top: 1px solid #777;
     padding-inline: 8px;
     padding-block: 2px;
-    border-radius: 10px 0px 0px 10px;
-  }
-
-  header div .es-lang:hover {
-    background: #eee;
   }
 
   header div .en-lang {
-    border: 1px solid #ccc;
+    border: 1px solid #777;
     padding-inline: 8px;
     padding-block: 2px;
-    border-radius: 1px 10px 10px 1px;
-  }
-
-  header div .en-lang:hover {
-    background: #eee;
   }
 
   .print {
