add tailwind breakpoint sm to experience section

--- a/src/components/printablecv-components/Experience.astro
+++ b/src/components/printablecv-components/Experience.astro
@@ -17,7 +17,7 @@ const { data, sectionTitle } = Astro.props
         return (
           <li>
             <article>
-              <header class="flex justify-between items-start mb-1">
+              <header class="sm:flex justify-between items-start mb-1">
                 <div>
                   <h3 class="font-semibold text-[1.1rem] text-[#111] dark:text-[#dfdfdf]">{name}</h3>
                   <h4 class="font-normal text-[#222] dark:text-[#dfdfdf]">{position}</h4>
