--- a/src/components/printablecv-components/Hero.astro
+++ b/src/components/printablecv-components/Hero.astro
@@ -29,11 +29,11 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean)
 ---
 
 <Section>
-  <div class="flex flex-row items-center justify-between gap-4">
-    <div class="flex flex-col gap-[0.35rem] pr-8">
-      <header>
-        <h1 class="text-[2rem] dark:text-[#ddd] font-semibold">{ name }</h1>
-        <div class="languageToggle">
+  <div class="flex flex-col-reverse sm:flex-row items-center justify-between gap-4">
+    <div class="flex flex-col gap-[0.35rem]">
+      <header class="flex flex-col-reverse sm:flex-row">
+        <h1 class="text-[2rem] dark:text-[#ddd] font-semibold self-start">{ name }</h1>
+        <div class="languageToggle pt-[0.25rem]">
           <a class="es-lang rounded-[10px_0px_0px_10px] hover:rounded-[5px_0px_0px_5px] hover:bg-[rgb(247,255,163)] dark:hover:bg-[#4d4d4d]" href="/min-portfolio">
             <FlagArg />
           </a>
