change project links colors

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -40,7 +40,7 @@ const {
                 projectRepo && (
                     <a
                         href={projectRepo}
-                        class="justify-center p-2 flex items-center gap-1 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary bg-[#0001] dark:bg-[#fff1] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
+                        class="justify-center p-2 flex items-center gap-1 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-[#00fa94] bg-[#0001] dark:bg-[#494949a9] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-[#00fa94] dark:hover:text-dark-fondo-primary"
                         target="_blank"
                     >
                         <svg
@@ -66,7 +66,7 @@ const {
                 projectSite && (
                     <a
                         href={projectSite}
-                        class="justify-center p-2 flex items-center gap-1 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary bg-[#0001] dark:bg-[#fff1] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
+                        class="justify-center p-2 flex items-center gap-1 font-semibold text-[0.91rem] text-light-texto-secondary dark:text-[#00fa94] bg-[#0001] dark:bg-[#494949a9] transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
                         target="_blank"
                     >
                         <svg
